# webapp

./: .gitignore  env.sample
backend/: pyproject.toml
backend/backend/: __init__.py  __main__.py  config.py  neo4j.py
backend/backend/auth/: __init__.py
backend/backend/questionnaire/: __init__.py
frontend/: .dir-locals.el  index.html  jsconfig.json  old-vite-conf-mts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.css  App.jsx  i18n.js  index.jsx  main.jsx
frontend/src/@common/colors/: commonDark.ts  index.ts  skyBlue.ts
frontend/src/@common/core/CommonAuthorization/: CommonAuthorization.tsx  index.ts  sessionRedirectUrl.ts
frontend/src/@common/core/CommonDialog/: CommonDialog.tsx
frontend/src/@common/core/CommonHighlight/: CommonHighlight.tsx  index.ts
frontend/src/@common/core/CommonLayout/: CommonLayout.tsx
frontend/src/@common/core/CommonLoading/: CommonLoading.tsx
frontend/src/@common/core/CommonMessage/: CommonMessage.tsx
frontend/src/@common/core/CommonNavigation/: CommonNavBadge.tsx  CommonNavItem.tsx  CommonNavigation.tsx  isUrlInChildren.ts
frontend/src/@common/core/CommonPageCarded/: CommonPageCarded.tsx  CommonPageCardedHeader.tsx  CommonPageCardedSidebar.tsx  CommonPageCardedSidebarContent.tsx  index.ts
frontend/src/@common/core/CommonPageSimple/: CommonPageSimple.tsx  CommonPageSimpleHeader.tsx  CommonPageSimpleSidebar.tsx  CommonPageSimpleSidebarContent.tsx  index.ts
frontend/src/@common/default-settings/: CommonDefaultSettings.ts  index.ts
frontend/src/@common/hooks/: index.ts
frontend/src/@common/utils/: CommonAwaitRender.tsx  CommonNavigationHelper.ts  CommonUtils.ts
frontend/src/@history/: @history.ts
frontend/src/@mock-api/: MockAdapterProvider.jsx  MockAdapterProvider.tsx  mock-api.json
frontend/src/@mock-api/api/: auth-api.js  auth-api.ts  calendar-api.ts  ecommerce-api.ts  messenger-api.ts  notes-api.ts  scrumboard-api.ts  tasks-api.ts
frontend/src/app/: App.jsx  AppContext.js  store.js  withAppProviders.jsx
frontend/src/app/auth/: AuthRouteProvider.jsx  AuthRouteProvider.tsx  authRoles.ts
frontend/src/app/config/: navigationConfig.js  navigationConfig.ts  routesConfig.jsx  settingsConfig.js  themesConfig.js
frontend/src/app/store/: apiService.js  generateReducersFromSlices.js  i18nSlice.js  store.js  withSlices.jsx
frontend/src/app/theme-layouts/: themeLayoutConfigs.js  themeLayouts.js
frontend/src/features/counter/: counterSlice.test.js
frontend/src/features/quotes/: Quotes.jsx  Quotes.module.css  quotesApiSlice.js
frontend/src/styles/: print.css
frontend/src/utils/: test-utils.jsx
pipeline/docker/: Dockerfile.backend  Dockerfile.frontend
(+172 files in other folders)
